<resources>
    <string name="app_name">Mudskipper</string>
    <string name="discover">Discover</string>
    <string name="projects">Projects</string>
    <string name="my_profile">My Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="tag">Join us and \nBuild your relationship with others</string>
    <string name="login">Login</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>

    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="register">Register</string>
    <string name="your_name">Full Name</string>
    <string name="re_type_password">Re-type Password</string>

    <string name="your_projects">Your Projects</string>
    <string name="create_new_project">Create a New Project</string>
    <string name="add_project">Add Project</string>
    <string name="cancel">Cancel</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project Description</string>
    <string name="description">Description</string>
    <string name="collaborator">Collaborator(s)</string>
    <string name="add_collaborator">Add Collaborator</string>
    <string name="video_link">Video Link</string>
    <string name="category">Category</string>
    <string name="delete_project">Delete Project</string>

    <string name="categories">Categories</string>
    <string name="trending">Trending</string>
    <string name="search_movie">Movie: </string>
    <string name="category_tag">Tag</string>
    <string name="no_tag">No Tag Found</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="about_me">About Me:</string>
    <string name="contact_detail">Contact Details:</string>
    <string name="my_skills">My Skills:</string>
    <string name="skills_list">Skills List</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="my_projects">Projects:</string>
    <string name="phone_no">Phone Number (Optional) </string>
    <string name="select_interest_and_commitment">Select interest and commitment</string>
    <string-array name="skillSpinnerItems">
        <item>Movie</item>
        <item>Photography</item>
        <item>UI/UX</item>
        <item>Animation</item>
        <item>Editing</item>
        <item>High Speed photography</item>
        <item>Motion Blur Photography</item>
        <item>Micro Photography</item>
        <item>Panoramic Photography</item>
        <item>Black and White Photography</item>
    </string-array>

    <string-array name="aus_states">
        <item>NSW</item>
        <item>TAS</item>
        <item>VIC</item>
        <item>SA</item>
        <item>WA</item>
        <item>QLD</item>
    </string-array>

    <string-array name="nsw_cities">
        <item>Albury</item>
        <item>Armidale</item>
        <item>Bathurst</item>
        <item>Blue Mountains</item>
        <item>Broken Hill</item>
        <item>Campbelltown</item>
        <item>Sydney</item>
        <item>Cessnock</item>
    </string-array>

    <string-array name="vic_cities">
        <item>Melbourne</item>
    </string-array>

    <string-array name="interests">
        <item>Videography</item>
        <item>Photography</item>
        <item>Wildlife</item>
    </string-array>

    <string-array name="occupations">
        <item>Director/Filmmaker</item>
        <item>Actor/Actress</item>
        <item>Photographer</item>
        <item>Digital Artist/Designer</item>
        <item>Freelancer</item>
    </string-array>

    <string-array name="director_skills">
        <item>Filming</item>
        <item>Editing</item>
        <item>Screenwriting</item>
        <item>Communication</item>
        <item>Leadership</item>
        <item>Strategic thinking</item>
    </string-array>

    <string-array name="acting_skills">
        <item>Dancing</item>
        <item>Singing</item>
        <item>Combat Training</item>
        <item>Musical Instruments</item>
        <item>Fluency in 2 or more Languages</item>
        <item>Communication</item>
    </string-array>

    <string-array name="photography_skills">
        <item>High Speed Protography</item>
        <item>Motion Blur Photography</item>
        <item>Micro Photography</item>
        <item>Panoramic Photography</item>
        <item>Black and White Photography</item>
    </string-array>

    <string-array name="design_skills">
        <item>Adobe Photoshop</item>
        <item>Canva</item>
        <item>Microsoft Publisher</item>
        <item>Microsoft Paint (3D)</item>
        <item>CSS</item>
        <item>XML/HTML</item>
    </string-array>

    <string-array name="freelance_skills">
        <item>Photography</item>
        <item>Filmmaking</item>
        <item>Film Editing</item>
        <item>Digital Design</item>
    </string-array>

    <string-array name="roles">
        <item>Actor</item>
        <item>Director</item>
        <item>Script Writer</item>
        <item>Editor</item>
        <item>Photographer</item>
        <item>Artist</item>
        <item>Cameraman</item>
        <item>Freelance</item>
    </string-array>

</resources>