<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/lato"
            android:gravity="center_horizontal"
            android:text="Welcome to Mudskipper"
            android:textAlignment="center"
            android:textColor="#2F87C7"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/lato"
            android:text="Sign up"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/your_name"
            android:fontFamily="@font/lato"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textPersonName"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/e_mail"
            android:fontFamily="@font/lato"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password_r"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:fontFamily="@font/lato"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />



        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/re_type_password"
            android:fontFamily="@font/lato"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/lato"
            android:hint="@string/phone_no"
            android:inputType="number"
            android:padding="15dp"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/orange_btn"
                android:fontFamily="@font/lato"
                android:text="Create Account"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>