<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/occ_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/lato"
            android:text="Occupation Details"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/et_"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/your_name"
            android:fontFamily="@font/lato"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textPersonName"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/e_mail"
            android:fontFamily="@font/lato"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password_r"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:fontFamily="@font/lato"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />



        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/re_type_password"
            android:fontFamily="@font/lato"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
            android:id="@+id/spinnerStates"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/et_custom"
            android:entries="@array/aus_states">
        </com.androidbuts.multispinnerfilter.MultiSpinnerSearch>

        <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
            android:id="@+id/spinnerCities"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/et_custom">

        </com.androidbuts.multispinnerfilter.MultiSpinnerSearch>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/orange_btn"
                android:fontFamily="@font/lato"
                android:text="Create Account"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>