<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editP_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            android:textAlignment="center"
            android:textSize="50sp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="25dp" />

        <TextView
            android:id="@+id/editP_tv_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/e_mail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editP_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/your_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textPersonName"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/editP_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Description"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editP_mobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/phone_no"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="phone"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/editP_skills"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Skills"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="phone"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/orange_btn"
                android:fontFamily="@font/lato"
                android:text="Sign up"
                android:textColor="@android:color/white" />


        </RelativeLayout>
    </LinearLayout>

</ScrollView>