<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_l"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="center" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="vertical" >

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_photo"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:src="@android:color/darker_gray"
                            app:civ_border_color="#FF000000"
                            app:civ_border_width="@dimen/_1sdp" />

                        <TextView
                            android:id="@+id/profile_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_name"
                            android:fontFamily="@font/lato"
                            android:gravity="center"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_weight="1" >

                        <Button
                            android:id="@+id/follow_btn"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_28sdp"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:background="@drawable/orange_btn"
                            android:fontFamily="@font/lato"
                            android:text="@string/edit_profile"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/message_btn"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_28sdp"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:background="@drawable/white_curve_background"
                            android:fontFamily="@font/lato"
                            android:text="@string/message"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    style="@style/Widget.MaterialComponents.TabLayout.Colored"
                    android:layout_width="match_parent"
                    android:background="@color/bright_green"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:background="@color/primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tab_layout"
                    android:nestedScrollingEnabled="true"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>