<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ProjectDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17sp"

            android:fontFamily="@font/lato"
            android:ellipsize="end"
            android:maxLines="1"

            android:textColor="#2F87C7"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_8sdp" >
                <com.google.android.youtube.player.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/lato"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

        <LinearLayout
            android:id="@+id/likearea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_thumb_up_24" />

            <TextView
                android:id="@+id/tv_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/lato"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:typeface="normal" />

        </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/lato"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/tv_project_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/lato"
                android:textColor="@android:color/tertiary_text_dark"
                android:textSize="15sp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/tv_project_collaborator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/lato"
                android:text="@string/collaborator"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collaboratorRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clipToPadding="false"
                android:padding="4dp"
                android:scrollbars="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center" >

        <Button
            android:id="@+id/delete_project_btn"
            android:layout_width="170dp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/gray_btn"
            android:fontFamily="@font/lato"
            android:text="@string/delete_project"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>